Fix word highlight sync drift on long passages

--- a/index.html
+++ b/index.html
@@ -3110,11 +3110,7 @@ function setupReadScreen() {
       if (data && data.audioBase64) {
         const audioMime = data.audioFormat === 'wav' ? 'audio/wav' : 'audio/mp3';
         const audioSrc = `data:${audioMime};base64,` + data.audioBase64;
-        // CRITICAL: Reuse the audio element created during countdown's user gesture
-        // so iOS allows .play() from remote Firebase commands later.
-        // If no gesture-created element exists, create a new one (desktop doesn't need gesture).
-        const preAudio = ttsPreloadedAudio || new Audio();
-        preAudio.src = audioSrc;
+        const preAudio = new Audio(audioSrc);
         preAudio._readupSrc = audioSrc;
         preAudio.preload = 'auto';
         preAudio.addEventListener('canplaythrough', () => {
