--- a/index.html
+++ b/index.html
@@ -687,6 +687,13 @@ body.bedtime #home-stats-bar { display: none; }
   .kid-action-label { font-size: 1.2rem; }
 }
 
+/* ── Completion Screen ── */
+.reread-dot { font-size: 1.8rem; transition: all 0.3s; }
+.reread-dot.lit { opacity: 1 !important; animation: dotPop 0.4s cubic-bezier(0.34,1.56,0.64,1); }
+@keyframes dotPop {
+  0% { transform: scale(0.5); } 50% { transform: scale(1.3); } 100% { transform: scale(1); }
+}
+
 /* ── Reading Screen: Big Play Zone ── */
 .read-play-zone {
   display: flex; align-items: center; gap: 10px; margin: 12px 0 6px;
@@ -1280,13 +1287,42 @@ body.bedtime .read-side-btn { background: #252540; border-color: #3a3a5c; }
 
   <!-- SCREEN: Solo complete (reread tracker) -->
   <div class="screen" id="screen-solo-complete">
-    <div class="card" style="text-align:center;">
-      <div class="card-title" id="solo-complete-title">⭐ Great Reading!</div>
-      <div class="encouragement" id="solo-complete-msg" style="margin-bottom:16px;"></div>
-      <button class="btn-main btn-green" id="btn-solo-retry" style="font-size:1.1rem;">▶ Read Again</button>
-      <button class="btn-main btn-coral" id="btn-solo-wpm" style="margin-top:10px;font-size:1.1rem;">🎤 Read It Myself!</button>
-      <button class="btn-main btn-purple" id="btn-solo-wordbank" style="margin-top:10px;font-size:1.1rem;">📖 Word Bank</button>
-      <button class="btn-main btn-outline" id="btn-solo-new" style="margin-top:10px;">📚 New Story</button>
+    <div class="card" style="text-align:center;overflow:hidden;position:relative;">
+      <!-- Confetti canvas -->
+      <canvas id="confetti-canvas" style="position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1;"></canvas>
+      <div style="position:relative;z-index:2;">
+        <!-- Bookie celebrating -->
+        <div id="complete-mascot" style="margin:0 auto 8px;">
+          <svg viewBox="0 0 100 90" width="100" height="90" style="animation:mascotWiggle 1.5s ease-in-out infinite;">
+            <ellipse cx="50" cy="55" rx="28" ry="30" fill="#FECA57"/>
+            <ellipse cx="50" cy="62" rx="18" ry="15" fill="#FFF9E6"/>
+            <circle cx="38" cy="38" r="10" fill="white"/><circle cx="62" cy="38" r="10" fill="white"/>
+            <circle cx="39" cy="39" r="6" fill="#2C3E50"/><circle cx="61" cy="39" r="6" fill="#2C3E50"/>
+            <circle cx="40" cy="37" r="2.5" fill="white"/><circle cx="62" cy="37" r="2.5" fill="white"/>
+            <path d="M44 48 L50 55 L56 48Z" fill="#FF6B35"/>
+            <path d="M40 58 Q50 68 60 58" fill="none" stroke="#E17055" stroke-width="2.5" stroke-linecap="round"/>
+            <path d="M28 28 L22 12 L36 25Z" fill="#FF9F43"/>
+            <path d="M72 28 L78 12 L64 25Z" fill="#FF9F43"/>
+            <!-- Arms raised in celebration -->
+            <path d="M22 50 Q12 35 18 25" stroke="#FF9F43" stroke-width="5" stroke-linecap="round" fill="none"/>
+            <path d="M78 50 Q88 35 82 25" stroke="#FF9F43" stroke-width="5" stroke-linecap="round" fill="none"/>
+            <text x="16" y="22" font-size="12">⭐</text>
+            <text x="78" y="22" font-size="12">⭐</text>
+          </svg>
+        </div>
+        <div class="card-title" id="solo-complete-title" style="font-size:1.6rem;margin-bottom:4px;">⭐ Great Reading!</div>
+        <div class="encouragement" id="solo-complete-msg" style="margin-bottom:8px;"></div>
+        <!-- Reread progress dots -->
+        <div id="reread-dots" style="display:flex;justify-content:center;gap:10px;margin:12px 0 18px;">
+          <div class="reread-dot" id="dot-1">📖</div>
+          <div class="reread-dot" id="dot-2" style="opacity:0.25;">📖</div>
+          <div class="reread-dot" id="dot-3" style="opacity:0.25;">📖</div>
+        </div>
+        <button class="btn-main btn-green" id="btn-solo-retry" style="font-size:1.2rem;padding:16px;">▶ Read Again</button>
+        <button class="btn-main btn-coral" id="btn-solo-wpm" style="margin-top:10px;font-size:1.1rem;">🎤 Read It Myself!</button>
+        <button class="btn-main btn-purple" id="btn-solo-wordbank" style="margin-top:10px;font-size:1.1rem;">📖 Word Bank</button>
+        <button class="btn-main btn-outline" id="btn-solo-new" style="margin-top:10px;">📚 New Story</button>
+      </div>
     </div>
   </div>
 
@@ -4180,25 +4216,92 @@ function showReadComplete(readCount) {
   const msg = document.getElementById('solo-complete-msg');
   const retryBtn = document.getElementById('btn-solo-retry');
   const newBtn = document.getElementById('btn-solo-new');
+
+  // Animate reread dots
+  for (let i = 1; i <= 3; i++) {
+    const dot = document.getElementById('dot-' + i);
+    if (dot) {
+      if (i <= readCount) {
+        setTimeout(() => { dot.style.opacity = '1'; dot.classList.add('lit'); }, i * 200);
+      } else {
+        dot.style.opacity = '0.25'; dot.classList.remove('lit');
+      }
+    }
+  }
+
   if (readCount >= 3) {
-    title.textContent = '⭐ Superstar Reader!';
-    msg.innerHTML = `You read this story ${readCount} times! You're amazing!`;
+    title.textContent = '🌟 Superstar Reader!';
+    msg.innerHTML = `You read this story ${readCount} times!<br><strong style="color:var(--green);">That's how champions read!</strong>`;
     retryBtn.textContent = '🔄 Read Again';
     retryBtn.className = 'btn-main btn-outline';
     newBtn.className = 'btn-main btn-green';
     newBtn.style.marginTop = '0';
     retryBtn.style.marginTop = '10px';
+    // Big confetti burst for 3x!
+    setTimeout(() => launchConfetti(80), 300);
   } else {
     const next = readCount + 1;
-    title.textContent = `✅ Read #${readCount} Complete!`;
+    title.textContent = readCount === 1 ? '✅ Nice Job!' : '✅ Getting Better!';
     msg.innerHTML = `Great readers read stories 3 times!<br><span style="font-size:0.9rem;opacity:0.8;">Ready for read #${next}?</span>`;
     retryBtn.textContent = `▶ Read #${next} — Let's Go!`;
     retryBtn.className = 'btn-main btn-green';
     retryBtn.style.marginTop = '0';
     newBtn.className = 'btn-main btn-outline';
     newBtn.style.marginTop = '10px';
+    // Small confetti for each read
+    setTimeout(() => launchConfetti(25), 300);
   }
   show('screen-solo-complete');
+}
+
+// ── Confetti animation ───────────────────────────────────
+function launchConfetti(count) {
+  const canvas = document.getElementById('confetti-canvas');
+  if (!canvas) return;
+  const ctx = canvas.getContext('2d');
+  canvas.width = canvas.offsetWidth * 2;
+  canvas.height = canvas.offsetHeight * 2;
+  ctx.scale(2, 2);
+  const W = canvas.offsetWidth, H = canvas.offsetHeight;
+  const colors = ['#FF6B35','#FFD93D','#5CD85A','#54A0FF','#FF6B6B','#CE93D8','#FF9F43'];
+  const pieces = [];
+  for (let i = 0; i < count; i++) {
+    pieces.push({
+      x: W * 0.5 + (Math.random() - 0.5) * W * 0.3,
+      y: H * 0.3,
+      vx: (Math.random() - 0.5) * 8,
+      vy: -Math.random() * 10 - 4,
+      r: Math.random() * 6 + 3,
+      color: colors[Math.floor(Math.random() * colors.length)],
+      spin: Math.random() * 0.3 - 0.15,
+      angle: Math.random() * Math.PI * 2,
+      gravity: 0.18 + Math.random() * 0.08,
+      opacity: 1,
+    });
+  }
+  let frame = 0;
+  function draw() {
+    ctx.clearRect(0, 0, W, H);
+    let alive = false;
+    pieces.forEach(p => {
+      p.x += p.vx; p.y += p.vy; p.vy += p.gravity; p.angle += p.spin;
+      p.opacity -= 0.005;
+      if (p.opacity > 0 && p.y < H + 20) {
+        alive = true;
+        ctx.save();
+        ctx.translate(p.x, p.y);
+        ctx.rotate(p.angle);
+        ctx.globalAlpha = Math.max(0, p.opacity);
+        ctx.fillStyle = p.color;
+        ctx.fillRect(-p.r / 2, -p.r, p.r, p.r * 2);
+        ctx.restore();
+      }
+    });
+    frame++;
+    if (alive && frame < 180) requestAnimationFrame(draw);
+    else ctx.clearRect(0, 0, W, H);
+  }
+  draw();
 }
 
 // ── Word Bank ─────────────────────────────────────────────
