Fix word highlight sync drift on long passages

--- a/index.html
+++ b/index.html
@@ -922,6 +922,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad — just Bookie + 4 big buttons) -->
   <div class="screen active" id="screen-pick">
+    <div id="dev-build-tag" style="text-align:center;font-size:0.55rem;font-weight:800;color:var(--border);letter-spacing:1.5px;margin-bottom:-4px;">BUILD H</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
